[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/menu_bg.jpg" type="Texture" id=1]
[ext_resource path="res://assets/Themes/menu_theme.tres" type="Theme" id=2]
[ext_resource path="res://src/Menus/GameOver.gd" type="Script" id=3]

[node name="GameOver" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 3 )
gamePath = "res://src/Game/Cemetery.tscn"
menuPath = "res://src/Menus/MainMenu.tscn"

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )

[node name="OverText" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -187.0
margin_top = 87.0
margin_right = 187.0
margin_bottom = 148.0
text = "Game Over!"
align = 1

[node name="Score" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -165.5
margin_top = -192.0
margin_right = 165.5
margin_bottom = -131.0
text = "Score: 100"
align = 1

[node name="HighScore" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -280.0
margin_top = -103.0
margin_right = 280.0
margin_bottom = 19.0
text = "HighScore: 101
(New HighScore)"
align = 1

[node name="Retry" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -98.0
margin_top = -283.0
margin_right = 98.0
margin_bottom = -216.0
text = "Retry"
flat = true

[node name="Menu" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -93.0
margin_top = -172.0
margin_right = 93.0
margin_bottom = -105.0
text = "Menu"
flat = true

[connection signal="button_up" from="Retry" to="." method="_on_Retry_button_up"]
[connection signal="button_up" from="Menu" to="." method="_on_Menu_button_up"]
